--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "author": "",
   "contributors": [],
   "scripts": {
+    "start": "node index.js",
     "dev": "",
     "test": ""
   },
   "description": "",
   "dependencies": {
     "axios": "^1.4.0",
-    "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
   }
