--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@yourusername/5.3-axios",
+  "name": "@matbuha/5.3-axios",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
