--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,31 +1,31 @@
-name: Publish Node.js Package
+name: Node.js CI/CD
 
 on:
   push:
     branches:
-      - main  
+      - main  # Set this to your main branch or any other branch you want
 
 jobs:
-  build:
+  build-and-publish:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: read
+      packages: write
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'  # Ensure this matches the version you use
+          registry-url: 'https://npm.pkg.github.com/'
+      
+      - name: Install Dependencies
+        run: npm ci  # Uses package-lock.json to install dependencies
+        
+      - name: Run Tests
+        run: npm test  # Make sure you have tests or remove this step if not applicable
 
-    - name: Use Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'  # Set to the version you use
-        registry-url: 'https://npm.pkg.github.com/'
-        scope: '@matbuha'  # Replace with your GitHub username or org
-
-    - name: Install dependencies
-      run: npm install
-
-    # - name: Build (if necessary)
-    #   run: npm run build  # This step can be adjusted or removed as necessary
-
-    - name: Publish to GitHub Packages
-      run: npm publish
-      env:
-        NODE_AUTH_TOKEN: ${{secrets.GH_PACKAGES_TOKEN}}
+      - name: Publish to GitHub Packages
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}  # Ensure you use the correct secret for your PAT
