--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -12,12 +12,12 @@ jobs:
       contents: read
       packages: write
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '20'  # Ensure this matches the version you use
-          registry-url: 'https://npm.pkg.github.com/'
+          node-version: '20.11.1'  # Ensure this matches the version you use
+          registry-url: @matbuha:registry": "https://npm.pkg.github.com"
       
       - name: Install Dependencies
         run: npm ci  # Uses package-lock.json to install dependencies
