--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.11.1'  # Ensure this matches the version you use
-          registry-url: @matbuha:registry": "https://npm.pkg.github.com"
+          node-version: '20'  # Ensure this matches the version you use
+          registry-url: 'https://npm.pkg.github.com/'
       
       - name: Install Dependencies
         run: npm ci  # Uses package-lock.json to install dependencies
@@ -25,4 +25,6 @@ jobs:
       - name: Publish to GitHub Packages
         run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}  # Ensure you use the correct secret for your PAT
+          NODE_AUTH_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
+          NPM_CONFIG_REGISTRY: "https://npm.pkg.github.com/"
+          NPM_CONFIG_USERCONFIG: ".npmrc"
