--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20.11.1'  # Ensure this matches the version you use
+          node-version: '20.11.1'
           registry-url: 'https://npm.pkg.github.com/'
           scope: '@matbuha'
       
@@ -24,8 +24,9 @@ jobs:
         run: npm ci  # Uses package-lock.json to install dependencies
       - name: Configure npm
         run: |
-          echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
-          echo "@matbuha:registry=https://npm.pkg.github.com" >> .npmrc
+          echo "registry=https://registry.npmjs.org/" > .npmrc
+          echo "@matbuha:registry=https://npm.pkg.github.com/" >> .npmrc
+          echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" >> .npmrc
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
 
