--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,2 @@
-registry=https://registry.npmjs.org/
-//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
-@matbuha:registry=https://npm.pkg.github.com/
+# registry=https://registry.npmjs.org/
+# @matbuha:registry=https://npm.pkg.github.com/
