--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -27,7 +27,7 @@ jobs:
           echo "registry=https://registry.npmjs.org/" > .npmrc
           echo "@matbuha:registry=https://npm.pkg.github.com/" >> .npmrc
           echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" >> .npmrc
-          echo "npm login"
+          npm login
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_GitHub_Token }}
 
