--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,11 @@
-registry=https://registry.npmjs.org/
-@matbuha:registry=https://npm.pkg.github.com/
-always-auth=true
+# registry=https://registry.npmjs.org/
+# @matbuha:registry=https://npm.pkg.github.com/
+# always-auth=true
 
+
+registry=https://registry.npmjs.org/
+@matbuha:registry=https://registry.npmjs.org/
+always-auth=true
 
 # registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
 # registry=https://registry.npmjs.org/
