--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-          # scope: '@matbuha'
+          scope: '@matbuha'
       - run: npm ci
       - run: npm publish --registry=https://npm.pkg.github.com/
         env:
