--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -16,7 +16,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           scope: '@matbuha'
       - run: npm ci
-      - run: npm publish # --registry=https://npm.pkg.github.com/
+      - run: npm publish --registry=https://npm.pkg.github.com/
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_GITHUB_TOKEN }}
 
