--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -17,7 +17,7 @@ jobs:
           scope: '@matbuha'
       - run: npm ci
       - run: |
-          npm publis --scope=@matbuha --registry=https://npm.pkg.github.com
+          npm publish --scope=@matbuha --registry=https://npm.pkg.github.com
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_GITHUB_TOKEN }}
 
