--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -47,7 +47,7 @@ jobs:
 
       - name: Publish to GitHub Packages
         run: |
-          npm publish
+          npm publish --userconfig=~/.npmrc --registry=https://registry.npmjs.org/
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_GITHUB_TOKEN }}
