--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,9 @@
-//registry.npmjs.org/:_authToken=dummy
+# //registry.npmjs.org/:_authToken=dummy
+# @matbuha:registry=https://npm.pkg.github.com/
+
+# registry=https://registry.npmjs.org/
+# //registry.npmjs.org/:_auth={{ base64 of username:password redacted here }}
+
+registry=https://registry.npmjs.org/
 @matbuha:registry=https://npm.pkg.github.com/
+//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
